manifest_mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: mySQL
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: mysql
        image: mysql:5.7
        args:
          - --max_allowed_packet=1G
          #- --sql-mode='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION'
        securityContext:
          runAsUser: 999
          runAsGroup: 999
        ports:
          - containerPort: 3306
            name: mysql
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - name: mysql
            mountPath: /var/lib/mysql
            subPath: mysql
      volumes:
      - name: mysql
        persistentVolumeClaim:
          claimName: mysql-claim
      - name: mysql-credentials
        secret:
          secretName: mysql-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
    tier: mySQL
